# batchman

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  docker-compose.yml  package-lock.json  setup-web.js  test_log.txt
.cursor/rules/: basic.mdc
.github/: copilot-instructions.md
dockerfiles/: Dockerfile.fail  Dockerfile.forever
src/: api.rs  context.rs  cssbundle.rs  errors.rs  jsbundle.rs  main.rs  utils.rs  web.rs
src/actions/: create_schdule.rs  create_task_definition.rs  delete_schedule.rs  delete_task_definition.rs  list_schedules.rs  list_task_definition.rs  mod.rs  patch_schedule.rs  patch_task_definition.rs  run_pending_job.rs  stop_job.rs  submit_job.rs  task_definition.rs  track_runnng_job.rs
src/background/: job_tracker.rs  mod.rs  runner.rs  scheduler.rs  status_tracker.rs
src/db/: mod.rs
src/db/entities/: job.rs  mod.rs  schedule.rs  task_definition.rs
src/docker/: inspect.rs  mod.rs  run.rs  stop.rs
src/domain/: container.rs  job.rs  mod.rs  schedule.rs  task_definition.rs
src/domain/container/: dao.rs
src/domain/job/: dao.rs  dto.rs  service.rs
src/domain/schedule/: dao.rs  dto.rs  service.rs
src/domain/task_definition/: dao.rs  dto.rs  service.rs
src/repositories/: job.rs  mod.rs  schedule.rs  task_definition.rs
src/routes/: jobs.rs  mod.rs  schedules.rs  task_definitions.rs
src/types/: cron.rs
tests/: schedules_api.rs
web/: package-lock.json  package.json  tsconfig.json  webpack.config.js
web/public/: index.html
web/public/about/: index.html
web/src/: App.tsx  api.ts  config.ts  utils.ts
(+35 files in other folders)
