[package]
name = "batchman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
axum = { version="~0.8.1", features=["macros"] }
chrono = "0.4.40"
log = "0.4.26"
log4rs = "1.3.0"
sea-orm = { version = "~1.1.7", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
axum-test = "0.5.0" # For testing axum handlers
# sea-orm is already in dependencies, features for testing (like sqlite) are already enabled
# tokio is already in dependencies, "full" feature is good for tests too
# serde_json is already in dependencies

[[bin]]
name = "api"
path = "./src/api.rs"
